syntax = "proto3";

package vault;

message VaultIdentifier {
  bytes id = 1;
}

message Vault {
  oneof object {
    VaultV1 v1 = 1;
  }
}

message VaultV1 {
  string descriptor = 1;
  bytes network = 2;
  bytes shared_key = 3;
}

message VaultMetadata {
  // Fields needed to identify the vault
  VaultIdentifier vault_id = 1;
  bytes network = 2;

  // Metadata
  string name = 3;
  string description = 4;
}